src/index.scss
* {
  font-family: 'Lato', sans-serif;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  height: 100%;
}

body {
  height: 100%;
  background-color: #f0fefe;
}

#root {
  height: 100%;
}

@media screen and (min-width: 769px) {
  html {
    font-size: 70%;
  }
}

@media screen and (min-width: 1025px) {
  html {
    font-size: 80%;
  }
}

